[gd_scene load_steps=6 format=3 uid="uid://c0331kddmygfg"]

[ext_resource type="Script" path="res://UI/PopUp/DrainablePopupEntry.gd" id="1_ie6q5"]
[ext_resource type="FontFile" uid="uid://bgmbqeubb34cp" path="res://Assets/Fonts/rogue.ttf" id="2_5kevt"]
[ext_resource type="PackedScene" uid="uid://ciug3sucml2b5" path="res://UI/PopUp/EnergyIcon.tscn" id="3_7jf2a"]

[sub_resource type="LabelSettings" id="LabelSettings_0dv8f"]
line_spacing = 0.0
font = ExtResource("2_5kevt")
font_size = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iprbr"]
border_width_top = 1

[node name="EntityEntry" type="MarginContainer"]
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_ie6q5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="EntityName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Rock"
label_settings = SubResource("LabelSettings_0dv8f")
horizontal_alignment = 1

[node name="Seperator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_iprbr")

[node name="EnergyList" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="EnergyIcon1" parent="VBoxContainer/EnergyList" instance=ExtResource("3_7jf2a")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon2" parent="VBoxContainer/EnergyList" instance=ExtResource("3_7jf2a")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon3" parent="VBoxContainer/EnergyList" instance=ExtResource("3_7jf2a")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon4" parent="VBoxContainer/EnergyList" instance=ExtResource("3_7jf2a")]
unique_name_in_owner = true
visible = false
layout_mode = 2
